# KK-Project

DeadArgumentElimination/: .gitignore  CMakeLists.txt  DeadArgumentEliminationPass.cpp  presentation.md  test.c
DeadStoreElimination/: DeadStoreEliminationPass.cpp  DeadStoreEliminationPassPresentation.md  test.c  test_with_comments.c
